--- a/PulseLink.html
+++ b/PulseLink.html
@@ -98,6 +98,7 @@
     <section>
         <h2>Project Overview</h2>
         <p>PulseLink Bracelets are a pair of wireless, interactive bracelets designed to connect two individuals over distance. Using force sensors and ESP-NOW communication with ESP32 microcontrollers, each bracelet allows users to send a tactile signal by pressing a button. The signal activates a buzzer on the other bracelet, enabling a unique form of nonverbal communication. PulseLink Bracelets are perfect for partners, friends, or family members who want to feel connected despite being apart.</p>
+        <p>(ps literal blood and sweat was spilled for this project as you can see.)</p>
     </section>
 
     <section>
