--- a/PulseLink.html
+++ b/PulseLink.html
@@ -98,7 +98,6 @@
     <section>
         <h2>Project Overview</h2>
         <p>PulseLink Bracelets are a pair of wireless, interactive bracelets designed to connect two individuals over distance. Using force sensors and ESP-NOW communication with ESP32 microcontrollers, each bracelet allows users to send a tactile signal by pressing a button. The signal activates a buzzer on the other bracelet, enabling a unique form of nonverbal communication. PulseLink Bracelets are perfect for partners, friends, or family members who want to feel connected despite being apart.</p>
-        <p>(ps literal blood and sweat was spilled for this project as you can see.)</p>
     </section>
 
     <section>
@@ -113,6 +112,8 @@
         </div>
         <p>The concept behind PulseLink Bracelets focuses on enhancing emotional connection through tactile interaction. By using a simple press of the sensor on one bracelet, a signal is transmitted to the paired bracelet, creating a gentle buzz. This minimalist design fosters an intuitive and immediate response, making it a creative tool for staying in touch. The use of ESP-NOW ensures a low-latency connection, reinforcing the real-time experience of the interaction.</p>
         <p>The bracelets are housed in custom-designed, 3D-printed casings made of lightweight and durable material. The ergonomic design ensures that the bracelets are comfortable to wear for extended periods while securely housing the electronics. The curved design of the casing follows the natural shape of the wrist, while strategically placed openings allow for easy access to the force sensor and buzzer components.</p>
+        <p>(ps. literal blood and sweat was spilled for this project as you can see.)</p>
+
     </section>
 
     <section>
